New FrostyBoy Sandbox/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Bevwizz_Invoice_Number__c</fullName>
        <label>Bevwizz Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bevwizz_Notification_Mail_Status__c</fullName>
        <formula>IMAGE( IF( NOT(ISBLANK( Notifcation_Mail_Sent__c )), &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bevwizz Notification Mail Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Labour Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_incurred_on_Spare_Parts__c</fullName>
        <label>Cost incurred on Spare Parts</label>
        <summarizedField>Spare_Parts_Used__c.Cost_Incurred__c</summarizedField>
        <summaryForeignKey>Spare_Parts_Used__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Internal_Notification_Mail_Status__c</fullName>
        <formula>IMAGE( IF( NOT(ISBLANK( Internal_Notification_Sent__c )), &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Notification Mail Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notification_Sent__c</fullName>
        <label>Internal Notification Sent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Machine_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine Inventory</label>
        <referenceTo>Machine_Inventory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine</label>
        <referenceTo>Machine__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notifcation_Mail_Sent__c</fullName>
        <label>Notifcation Mail Sent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serviced_By__c</fullName>
        <label>Serviced By</label>
        <picklist>
            <picklistValues>
                <fullName>Frosty Boy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bevwizz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Machine_Inventory__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Serviced_By__c</columns>
        <columns>Bevwizz_Invoice_Number__c</columns>
        <columns>Invoice_Attached__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>